syntax="proto3";

package proto;

option go_package = "pkg/genproto";

import "submodule/protos/protos/common.proto";
service PrivateService {
    rpc CreatePrivate(CreatePrivateReq) returns (Void) {}
    rpc GetPrivate(ById) returns (PrivateGet) {}
    rpc ListPrivates(PrivateListReq) returns (PrivateListRes) {}
    rpc UpdatePrivate(UpdatePrivat) returns (Void) {}
    rpc DeletePrivate(DeletePrivat) returns (Void) {}
}


message CreatePrivateReq{
    string swaggerUrl = 1;  
    string phone_number = 2;
    string telegram_username = 3;
    repeated Documentation documentation = 4;
}


message PrivateGet {
    string id = 1;
    string swaggerUrl = 2;
    string phone_number = 3;
    string telegram_username = 4;
    Documentation documentation = 5;
    string created_at = 6;
}

message UpdatePrivat{
    string id = 1;
    BodyUpt Body = 2;
}

message BodyUpt{
    string swaggerUrl = 1;  
    string phone_number = 2;
    string telegram_username = 3;
    repeated Documentation documentation = 4;
}

message DeletePrivat{
    string id = 1;
}

message PrivateListReq{
    Pagination pagination = 1;
}
message PrivateListRes{
    repeated PrivateGet private = 1;
}